# ansible-homebrew

./: .gitlab-ci.yml  .travis.yml  LICENSE  README.md  Taskfile.yml  package.json  pnpm-lock.yaml  pyproject.toml
.config/docs/: package.json  pyproject.toml
.config/docs/local/slim/: exe.txt  install.txt
.config/taskfiles/ci/: Taskfile.yml
.config/taskfiles/docker/: Taskfile-build.yml  Taskfile.yml
.config/taskfiles/git/: Taskfile.yml
.config/taskfiles/install/: Taskfile-requirements.yml  Taskfile-software.yml  Taskfile.yml
.config/taskfiles/release/: Taskfile.yml
docs/: CONTRIBUTING.md
local/: package-lock.json
local/slim/: exe.txt  install.txt
meta/: main.yml
molecule/: converge.yml
tasks/: main.yml
test/darwin/: test.yml
test/windows/: test.yml
